# petritype

./: .gitignore  HEAVY_NOTEBOOKS.md  README.md  TRANSITION_SELECTION.md  __init__.py  commit-notes.txt  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
examples/: __init__.py
examples/caching/: execution_subgraph.ipynb  hypothetical_caching.py  relationship_and_execution_graphs.ipynb
examples/illustrations/: hypothetical_web_scrape.ipynb
examples/ml_model/: fine_tune.ipynb  fine_tune.py  hypothetical_training_steps.py
examples/special_cases/: returning_empty_list.ipynb  returning_empty_list.py
examples/time_series_stats/: hypothetical_time_series.py  illustrations_of_distributions.ipynb  stats_executable_graph.ipynb
examples/toy/: interactive_traffic_monitor.py  interactive_traffic_monitor_notebook.py  parcel_distribution.ipynb  parcel_distribution.py  rain_drops.ipynb
petritype/: __init__.py  decorator.py
petritype.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
petritype/core/: ast_extraction.py  data_structures.py  descriptions.py  executable_graph_components.py  notes.md  parse_modules.py  relationship_graph_components.py  rustworkx_graph.py  type_comparisons.py  type_relationship_graph_components.py
petritype/helpers/: __init__.py  structures.py
petritype/plotting/: rustworkx_to_graphviz.py  simple_graphviz.py
test/core/: test_ast_extraction.py  test_collect_data.py  (+6 more)
tests/: render_notebook_gallery.py  test_decorator.py  test_notebooks.py  test_step_count.py  test_transition_selection.py
(+20 files in other folders)
